2010-03-20  Teodor Zlatanov  <tzz@lifelogs.com>

	* net/secrets.el: Fix parenthesis.
	(secrets-enabled): Fix parenthesis.

2010-03-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	Use more relative file and directory names.
	* Makefile.in (EMACS): Arrange for it to work when we chdir.
	(setwins, setwins_almost, setwins_for_subdirs):
	Don't `cd'; output relative names.
	(all, compile, compile-always, compile-last): Set emacswd.
	(custom-deps, finder-data, autoloads, update-subdirs, compile-last):
	Just cd to the lisp source dir so we can use relative file names.

	* outline.el (hide-sublevels): Unfix the paren non-typo! (bug#5738).

2010-03-20  Glenn Morris  <rgm@gnu.org>

	* textmodes/rst.el: Use faces for font-lock customization, and make the
	old -face variables obsolete.
	(rst-block, rst-external, rst-definition, rst-directive, rst-comment)
	(rst-emphasis1, rst-emphasis2, rst-literal, rst-reference): New faces.
	(rst-block-face, rst-external-face, rst-definition-face)
	(rst-directive-face, rst-comment-face, rst-emphasis1-face)
	(rst-emphasis2-face, rst-literal-face, rst-reference-face):
	Make obsolete.
	(rst-font-lock-keywords-function): Update for above changes.

2010-03-20  Juri Linkov  <juri@jurta.org>

	* s-region.el:
	* obsolete/s-region.el: Move to obsolete.

2010-03-19  Juanma Barranquero  <lekktu@gmail.com>

	* vc-dispatcher.el (vc-do-command): Remove reference to `vc-path'.

2010-03-19  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hooks.el (vc-path): Remove variable and obsolete declaration.

2010-03-19  Dan Nicolaescu  <dann@ics.uci.edu>

	Add special markup processing for commit logs.
	* log-edit.el (log-edit-extra-flags): New variable.
	(log-edit): Add new argument MODE.  Use that mode when non-nil
	instead of the log-view-mode.
	(log-view-process-buffer): New function.

	* vc.el: Document that the checkin method takes optional
	arguments.  Document new backend specific method: log-view-mode.
	(vc-default-log-edit-mode): New function.